src/styles/layout.scss
@use 'mixins';

.section {
	height: 100vh;
	min-height: calc(100vh - 4.5rem);

	@include mixins.set-breakpoint('mobile') {
		margin-top: var(--nav-ofst);
		height: auto;
	}
}

.max-width {
	max-width: 130rem;
	margin: 0 auto;
	width: 100%;
	height: 100%;
	padding: 0 9rem;

	@include mixins.set-breakpoint('desktop') {
		padding: 0 7rem;
	}

	@include mixins.set-breakpoint('tablet') {
		padding: 0 5rem;
	}

	@include mixins.set-breakpoint('mobile') {
		padding: 2rem;
	}
}

